fix: fixed the display of pictures

--- a/arFrame.css
+++ b/arFrame.css
@@ -41,6 +41,6 @@
 .numberOfPunct02{
     top: -174%;
     left: 82%;
-    content: url('C:/веб/course/fotoForProject/02.svg');
+    content: url('/fotoForProject/02.svg');
 }
 
