--- a/mediaForPhone.css
+++ b/mediaForPhone.css
@@ -2,7 +2,7 @@
 
     .mainBlockFon {
         height: 364px;
-        background-image: url(C:/веб/course/fotoForProject/mainFon3.jpg);
+        background-image: url(fotoForProject/mainFon3.jpg);
     }
 
     .burgerMenuInMain{
