--- a/mediaForTablet.css
+++ b/mediaForTablet.css
@@ -62,7 +62,7 @@
     }
 
     .mainBlockFon{
-     background-image: url(C:/веб/course/fotoForProject/mainFon2.jpg);
+     background-image: url(fotoForProject/mainFon2.jpg);
     }
 
     .skroll {
