--- a/mediaBetweetLaptopTablet.css
+++ b/mediaBetweetLaptopTablet.css
@@ -512,7 +512,7 @@
         width: 100%;
         height: 741px;
         flex-basis: 58%;
-        background-image: url(C:/веб/course/fotoForProject/servesesFoto12.png);
+        background-image: url(fotoForProject/servesesFoto12.png);
     }
 
     .servesesArticle {
