--- a/projectStyleMainBlock.css
+++ b/projectStyleMainBlock.css
@@ -23,7 +23,7 @@
 .mainBlockFon{
     width: 100%;
     height: 762px;
- background-image: url(C:/веб/course/fotoForProject/mainFon.jpg);
+ background-image: url(fotoForProject/mainFon.jpg);
  background-size: cover;
  background-position: center;
  transition: all 1S;
@@ -89,11 +89,21 @@ color: #E6E9EE;
 .vkElement{
     width: 35px;
     height: 35px;
+    transition: transform 0.3s ease; 
 }
 
 .telegramElement{
     width: 37px;
     height: 37px;
+    transition: transform 0.3s ease; 
+}
+
+.telegramElement:hover{
+  transform: scale(1.2);
+}
+
+.vkElement:hover{
+  transform: scale(1.2);
 }
 
 .headerTextBig {
@@ -298,4 +308,14 @@ color: #F0ECE6;
     top: -92%;
 }
 
+.buttonIacorStyle{
+  background:none;
+  border-color:rgba(255, 255, 255, 0);
+  transition: transform 0.3s ease; 
+  text-decoration: none;
+}
+
+.buttonIacorStyle:hover{
+  transform: scale(1.1);
+}
 
