--- a/scrollPersonal.css
+++ b/scrollPersonal.css
@@ -13,7 +13,7 @@
 width: 507px;
 height: 680px;
 
-background: url(C:/веб/course/fotoForProject/evgeniy.png);
+background: url(/fotoForProject/evgeniy.png);
 
 background-size: cover;
 background-position: center;
