--- a/servesesFrame.css
+++ b/servesesFrame.css
@@ -26,7 +26,7 @@
     height: 100%;
     width: 33.3%;
 
-    background-image: url(C:/веб/course/fotoForProject/servesesFoto1.png);
+    background-image: url(/fotoForProject/servesesFoto1.png);
     background-size: cover;
     
  background-position: center;
@@ -35,7 +35,7 @@
     height: 100%;
     width: 33.3%;
     
-    background-image: url(C:/веб/course/fotoForProject/EXTERIOR1.jpg);
+    background-image: url(/fotoForProject/EXTERIOR1.jpg);
     background-size: cover;
     
  background-position: center;
@@ -44,7 +44,7 @@
     height: 100%;
     width: 33.3%;
     
-    background-image: url(C:/веб/course/fotoForProject/clothes.jpg);
+    background-image: url(/fotoForProject/clothes.jpg);
     background-size: cover;
     
  background-position: center;
