--- a/instrument.css
+++ b/instrument.css
@@ -24,6 +24,7 @@
   border-color:rgba(255, 255, 255, 0);
   background:none;
   transition: transform 0.3s ease; 
+  
 }
 
 .buttonLite:hover {
@@ -33,10 +34,14 @@
 
 .buttonLiteSun{
   display:block;
+  width: 100%;
+  height: 100%;
 }
 
 .buttonLiteMoon{
   display: none;
+  width: 100%;
+  height: 100%;
 }
 
 
