--- a/mediaBetweetLaptopTablet.css
+++ b/mediaBetweetLaptopTablet.css
@@ -202,6 +202,10 @@
         top: -3%;
         left: 46.5%;
     }
+
+    .servesesVector2 {
+        left: -89%;
+    }
 }
 
 @media  (max-width: 1170px){
@@ -252,6 +256,17 @@
         font-size: 22px;
         line-height: 16px;
     }
+
+    .loginWindowInfoButtonText {
+        width: 50%;
+    }
+
+    
+        .regWindowVECTOR {
+            top: -87%;
+            left: 91%;
+        }
+    
 }
 
 
@@ -378,7 +393,7 @@
     .numberOfPunct03 {
         top: -99%;
         left: 67%;
-        width: 23%;
+        width: 30%;
     }
 
 
@@ -486,6 +501,20 @@
         top: -3%;
         left: 42.5%;
     }
+
+    .servesesVector2 {
+        left: -86%;
+    }
+
+    .loginWindowVECTOR {
+        position: relative;
+        left: 89%;
+        top: -80%;
+    }
+
+    .loginWindow {
+        height: 512px;
+    }
 }
 
 @media (min-width:768px) and (max-width: 947px){
@@ -524,32 +553,45 @@
 
     .servesesMainInfo {
         font-size: 28px;
+        position: relative;
+        width: 100%;
+        top: 9%;
+        left: 2%;
         margin-top: -3%;
     }
 
     .servesesHeader {
         font-size: 481%;
         letter-spacing: 0.6em;
-        top: -151%;
+        top: -142%;
         margin-left: 4%;
     }
 
     .servesesLitleText {
         font-size: 38px;
-        top: -152%;
+        top: -142%;
         left: 5%;
     }
 
     .servesesVector {
         top: -19%;
         left: 91%;
+        width: 68px;
+        height: 61px;
     }
    
     .portfolioVector {
-        top: -19%;
+        top: -33%;
         left: 45%;
     }
 
+
+    .portfolioVector2 {
+        width: 65px;
+        height: 68px;
+        top: -42%;
+        left: -46%;
+    }
     .line2 {
         top: -107.6%;
         left: -38%;
@@ -568,6 +610,11 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 112%;
+    }
+
+    .servesesVector2 {
+        left: 0%;
+        top: -12%;
     }
 }
 
@@ -668,5 +715,16 @@
     .personalVector {
         top: 10%;
         left: 90%;
+    }
+
+    .loginWindowSSecondText {
+        font-size: 27px;
+    }
+
+    .loginWindowLitleText {
+        font-size: 25px;
+        line-height: 33px;
+        margin-top: 2%;
+        margin-bottom: 3%;
     }
 }
