--- a/mediaForPhone.css
+++ b/mediaForPhone.css
@@ -41,9 +41,10 @@
     }
 
     .burgerMenuInMain {
-        margin-top: 1%;
-        width: 24px;
-        height: 24px;
+        margin-top: -3%;
+        margin-left: -6%;
+        width: 38px;
+        height: 22px;
     }
 
     .menuPointText {
@@ -52,8 +53,25 @@
     }
 
     .fourElementsInMain {
-        height: 26%;
+        height: 43%;
         margin-bottom: 51%;
+    }
+    .buttonTranslate {
+        width: 88%;
+        font-size: 72%;
+    }
+
+    .buttonLiteSun {
+        display: block;
+        width: 178%;
+        margin-left: -35%;
+        height: 100%;
+    }
+
+    .buttonLiteMoon {
+        width: 178%;
+        margin-left: -35%;
+        height: 100%;
     }
 
     .vkElement {
@@ -65,6 +83,14 @@
         width: 17px;
         height: 20px;
     }
+
+    
+.regTubStyle {
+    height: 132%;
+    background: none;
+    border-color: rgba(255, 255, 255, 0);
+    transition: all 0.5S;
+}
 }
 
 
@@ -119,6 +145,8 @@
 }
 
 }
+
+
 
 @media  (max-width: 400px){
 
@@ -329,6 +357,11 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 166%;
+    }
+
+    .loginWindowLitleText {
+        font-size: 15px;
+        line-height: 20px;
     }
 }
 
