--- a/projectStyleMainBlock.css
+++ b/projectStyleMainBlock.css
@@ -27,6 +27,9 @@
  background-size: cover;
  background-position: center;
  transition: all 1S;
+ 
+ position: relative;
+ z-index: 2;
 }
 
 .headMenu{
@@ -52,7 +55,7 @@ transition: all 1S;
 
 .fourElementsInMain {
     display: flex;
-    height: 44%;
+    height: 49%;
     flex-direction: column;
     align-items: center;
     margin-bottom: 32%;
