--- a/servesesFrame.css
+++ b/servesesFrame.css
@@ -7,13 +7,14 @@
     transition: all 1S;
 }
 
-.servesesFoto{
+.servesesFoto {
     width: 50%;
     height: 741px;
-    flex-basis: 50%;
+    flex-basis: 54%;
     overflow: hidden;
     transition: all 1S;
 }
+
 .servesesFoto-SliderLine{
     width: 300%;
     height:100%;
@@ -50,14 +51,14 @@
  background-position: center;
 }
 
-    .servesesArticle {
-        display: flex;
-        flex-basis: 43%;
-        width: 300px;
-        margin-left: 1%;
-        MARGIN-TOP: 1%;
-        flex-direction: column;
-    }
+.servesesArticle {
+    display: flex;
+    flex-basis: 43%;
+    width: 300px;
+    margin-left: 2%;
+    MARGIN-TOP: 1%;
+    flex-direction: column;
+}
 
     .servesesVector2{
         width: 61px;
@@ -100,6 +101,7 @@
 
 .servesesMainInfo{
     position: relative;
+    width: 108%;
     font-family: 'Poiret One';
     font-style: normal;
     font-weight: 400;
