refactor: change structure of the project

--- a/instrument.css
+++ b/instrument.css
@@ -44,12 +44,56 @@
   height: 100%;
 }
 
-
-
- 
-
 .open {
   opacity: 1;
   visibility: visible;
   transition-delay: 0s;
+}
+
+.porsonalVectorButton{
+  border-color:rgba(255, 255, 255, 0);
+  background:none;
+  transition: transform 0.3s ease; 
+  left: 0%;
+}
+
+.porsonalVector2Button{
+  border-color:rgba(255, 255, 255, 0);
+  background:none;
+  transition: transform 0.3s ease; 
+  position: relative;
+    width: 61px;
+    height: 61px;
+    top: -64%;
+    left: 91%;
+}
+
+.porsonalVectorButton:hover{
+  transform: scale(1.2)
+}
+
+.porsonalVector2Button:hover{
+  transform: scale(1.2)
+}
+
+.personalSkrollPagin1 {
+  border-color: rgba(255, 255, 255, 0);
+  background: none;
+  transition: transform 0.3s ease;
+  font-family: 'Poiret One';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 29px;
+  color: #69432C;
+}
+
+.personalSkrollPagin2{
+  border-color:rgba(255, 255, 255, 0);
+  background:none;
+  transition: transform 0.3s ease; 
+  font-family: 'Poiret One';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 29px;
+  color: #69432C;
 }
