--- a/mediaBetweetLaptopTablet.css
+++ b/mediaBetweetLaptopTablet.css
@@ -6,6 +6,8 @@
         display: flex;
   justify-content: center;
   align-items: center;
+  
+  transition: background-color 0.5s ease;
     }
 
     .deskTop{
@@ -31,7 +33,7 @@
     }
     .personalVector {
         height: 61px;
-        left: 96%;
+        left: 84%;
     }
 }
 
@@ -181,8 +183,8 @@
     }
 
     .personalVector {
-        top: -29%;
-        left: 95%;
+        top: -33%;
+        left: 87%;
     }
 
     .scrollPersonalDownText {
@@ -343,7 +345,7 @@
 
     .personalVector {
         top: -42%;
-        left: 92%;
+        left: 85%;
     }
 
     .reviewsHeadSmallText {
