--- a/mediaForTablet.css
+++ b/mediaForTablet.css
@@ -315,7 +315,10 @@
 
 .personalVector {
     top: 10%;
-    left: 90%;
+    left: 81%;
+}
+.porsonalVectorButton{
+    left: 1%;
 }
 
 /*  */
@@ -326,12 +329,14 @@
 
 .reviewsFrameColor {
     background: #977760;
+    opacity: 0;
 }
 
-.reviewsHeadSmallText{
+.reviewsHeadSmallText {
     color: #E6E9EE;
     font-size: 35px;
     margin-left: 4%;
+    margin-bottom: 12%;
 }
 
 .reviewsHeadHeader {
@@ -360,11 +365,21 @@
     margin-left: 7px;
 }
 
- .reviewVector {
+.reviewVector {
     color: #E6E9EE;
     left: 89%;
-    top: -31%;
-} 
+    top: -35%;
+}
+
+.reviewVector2 {
+    position: relative;
+    position: relative;
+    width: 5%;
+    height: 312px;
+    left: 2%;
+    top: -29%;
+    transform: rotate(180deg);
+}
 
 .reviews {
     height: 59%;
