--- a/projectStyleMainBlock.css
+++ b/projectStyleMainBlock.css
@@ -122,6 +122,9 @@ color: #E6E9EE;
     letter-spacing: 0.12em;
     color: #131F45;
     transition: all 1S;
+    opacity: 0;
+    transform: translateX(-50px);
+    transition: opacity 1s, transform 1s;
 }
 
 
@@ -182,6 +185,24 @@ color: #E6E9EE;
     
   }
 
+  
+
+  .passwordWindow {
+    width: 50%;
+    opacity: 0;
+    visibility: hidden;
+    height: 40%;
+    position: fixed;
+    top: 14%;
+    left: 25%;
+    display: flex;
+    background: #F0ECE6;
+    transition: opacity 0.3s ease, visibility 0s linear 0.3s;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
   .loginTubStyle{
     
     background:none;
@@ -208,55 +229,57 @@ color: #E6E9EE;
 
   .loginWindowInfo{
     display: flex;
-    margin-top: 3%;
+    margin-top: 0%;
     margin-left: 4%;
     flex-direction: column;
+    height: 81%;
+    justify-content: space-around;
   }
 
   .regWindowInfo {
     display: flex;
-    margin-top: 2%;
+    margin-top: 0%;
     margin-left: 4%;
     flex-direction: column;
-    height: 90%;
+    height: 100%;
 }
-  .registrationWindow{
-    width: 90%;
-    opacity: 0;
-     visibility: hidden;
-    height: 712px;
-    position: fixed;
-    top: 5%;
-    left: 5%;
-    background: #F0ECE6;
-    transition: opacity 0.3s ease, visibility 0s linear 0.3s;
-  }
+.registrationWindow {
+  width: 90%;
+  opacity: 0;
+  visibility: hidden;
+  height: 94%;
+  position: fixed;
+  top: 3%;
+  left: 5%;
+  background: #F0ECE6;
+  transition: opacity 0.3s ease, visibility 0s linear 0.3s;
+}
 
-  .loginWindowMainText{
-font-family: 'Poiret One';
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 0px;
-text-align: justify;
-letter-spacing: 0.17em;
-color: #69432C;
-opacity: 0.84;
-  }
-
-  .loginWindowSSecondText{
-font-family: 'Poiret One';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
+  .loginWindowMainText {
+    font-family: 'Poiret One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 230%;
+    margin-bottom: 2%;
     line-height: 0px;
-letter-spacing: 0.1em;
+    text-align: justify;
+    letter-spacing: 0.17em;
+    color: #69432C;
+    opacity: 0.84;
+}
 
-color: #8C694F;
-
-opacity: 0.95;
-
-  }
+.loginWindowSSecondText {
+  font-family: 'Poiret One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 176%;
+  line-height: 0px;
+  letter-spacing: 0.1em;
+  color: #8C694F;
+  margin-top: 2%;
+  margin-bottom: 1%;
+  opacity: 0.95;
+}
 
   .plaseForInfo{
     width: 86%;
@@ -264,6 +287,10 @@ opacity: 0.95;
 background: linear-gradient(90deg, #B0947B 0%, rgba(176, 148, 123, 0) 100%);
 
 border-color:rgba(255, 255, 255, 0);
+  }
+
+  input:focus {
+    outline: none;
   }
 
   .loginWindowLitleText{
@@ -274,14 +301,20 @@ font-weight: 400;
 font-size: 23px;
     line-height: 1px;
 letter-spacing: 0.1em;
-text-decoration-line: underline;
-margin-top: 4%;
-margin-bottom: 4%;
+margin-top: 1%;
+margin-bottom: 0%;
 color: #69432C;
 
 opacity: 0.95;
 
   }
+
+  .nickname-group{
+    display: flex;
+    flex-direction:row;
+  }
+
+  
 
   .loginWindowInfoButton{
     width: 349px;
@@ -292,12 +325,26 @@ opacity: 0.95;
     background: #B0947B;
     border-color:rgba(255, 255, 255, 0);
   }
+
+  .form-group {
+    height: 21%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.plaseForInfoForPassword {
+  width: 86%;
+  height: 26%;
+  background: linear-gradient(90deg, #B0947B 0%, rgba(176, 148, 123, 0) 100%);
+  border-color: rgba(255, 255, 255, 0);
+}
   
-  .loginWindowInfoButtonText{
-color: #F0ECE6;
-    width: 34%;
-    height: 10%;
-  }
+.loginWindowInfoButtonText {
+  color: #F0ECE6;
+  width: 34%;
+  height: 10%;
+}
 
   .loginWindowVECTOR{
     position: relative;
@@ -322,3 +369,27 @@ color: #F0ECE6;
   transform: scale(1.1);
 }
 
+.loginWindowInfoButtonTextnickname {
+  width: 34%;
+  height: 7%;
+  margin-bottom: 1%;
+  margin-top: 1%;
+}
+
+.loginWindowLitleTextInfo{
+  color: #F0ECE6;
+}
+
+.mapFrame{
+  height: 725px;
+  background: #F5F5F5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
