refactor: change structure of the project

--- a/mediaForTablet.css
+++ b/mediaForTablet.css
@@ -113,7 +113,7 @@
         left: 66%;
         width: 25%;
         height: 15%;
-        content: url(C:/веб/course/fotoForProject/01n2.svg);
+        content: url(C:/веб/coursefotoForProject/01n2.svg);
     }
 
     .modernTecMainText {
@@ -432,7 +432,7 @@
         left: 66%;
         width: 25%;
         height: 15%;
-        content: url(/fotoForProject/01n2.svg);
+        content: url(fotoForProject/01n2.svg);
     }
 
         .portfolio {
