--- a/personal.css
+++ b/personal.css
@@ -9,7 +9,7 @@
     width: 50%;
     height: 741px;
     flex-basis: 50%;
-    background-image: url(/fotoForProject/personal.png);
+    background-image: url(fotoForProject/personal.png);
     background-size: cover;
     background-position: center;
     z-index: 1;
@@ -45,7 +45,7 @@
 .fotoPerson-Slide1{
     height: 100%;
     width: 25%;
-    background-image: url(/fotoForProject/evgeniy.png);
+    background-image: url(fotoForProject/evgeniy.png);
     background-size: cover;
     background-position: center;
 }
@@ -53,7 +53,7 @@
 .fotoPerson-Slide2{
     height: 100%;
     width: 25%;
-    background-image: url(/fotoForProject/step.jpg);
+    background-image: url(fotoForProject/step.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -61,7 +61,7 @@
 .fotoPerson-Slide3{
     height: 100%;
     width: 25%;
-    background-image: url(/fotoForProject/alex.jpg);
+    background-image: url(fotoForProject/alex.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -69,7 +69,7 @@
 .fotoPerson-Slide4{
     height: 100%;
     width: 25%;
-    background-image: url(/fotoForProject/vik.jpg);
+    background-image: url(fotoForProject/vik.jpg);
     background-size: cover;
     background-position: center;
 }
